test/sigs_gateway_conformance/testdata/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgateway-conformance-test
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: conformance-gateway
  namespace: kgateway-conformance-test
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http-8080
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-80
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
